arreglando cookie
